# Gradfoil

./: .gitignore  CMakeLists.txt  setup.py
gradfoil/: __init__.py  gradfoil.py  xfoilExtract.py  xfoilRun.py
src/: WPSmodels.cpp  amiet.cpp  build_global_sys.cpp  build_wake.cpp  calc_ue_m.cpp  clear_RV.cpp  coupled.cpp  extract_BL_TE.cpp  fresenel.cpp  getDelta.cpp  get_cl.cpp  get_funcs.cpp  initBLXfoil.cpp  init_BL.cpp  initialise_thermo_vars.cpp  inviscid_solve_codi.cpp  main.cpp  panel_funcs.cpp  rebuild_ue_m.cpp  residuals.cpp  solve_glob.cpp  sound.cpp  spline.cpp  stagmove.cpp  stagpoint_find.cpp  update_state.cpp  update_transition.cpp
src/include/: amiet.h  data_structs.h  get_funcs.h  main_func.h  panel_funcs.h  real_type.h  residuals.h  vector_ops.hpp
src/noise_includes/: amiet.h
